--- a/baltimore.html
+++ b/baltimore.html
@@ -69,13 +69,13 @@ s0.parentNode.insertBefore(s1,s0);
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-secondary display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="showreelgallery.html" aria-expanded="false">Wildlife Art Photography</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="baltimore.html" aria-expanded="false">Stories for Children</a></li><li class="nav-item dropdown"><a class="nav-link link text-secondary dropdown-toggle display-4" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">Design Services</a><div class="dropdown-menu"><a class="text-secondary dropdown-item display-4" href="documentdesign.html" aria-expanded="false">Document Design Service</a><a class="text-secondary dropdown-item display-4" href="graphicdesignservice.html" aria-expanded="false">Graphic Design Service</a></div></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="contact.html" aria-expanded="false">Contact</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="showreelgallery.html" aria-expanded="false">Wildlife Art Photography</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="baltimore.html" aria-expanded="false">Stories for Children</a></li><li class="nav-item dropdown"><a class="nav-link link text-secondary dropdown-toggle display-4" href="baltimore.html" aria-expanded="false" data-toggle="dropdown-submenu">Products</a><div class="dropdown-menu"><a class="text-secondary dropdown-item display-4" href="duckandperiwinkle.html" aria-expanded="false">Greeting Cards</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-secondary dropdown-toggle display-4" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">Design Services</a><div class="dropdown-menu"><a class="text-secondary dropdown-item display-4" href="documentdesign.html" aria-expanded="false">Document Design Service</a><a class="text-secondary dropdown-item display-4" href="graphicdesignservice.html" aria-expanded="false">Graphic Design Service</a></div></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="contact.html" aria-expanded="false">Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="services1 cid-rTHUBzd2mh" id="services1-2o">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="services1 cid-rTHUBzd2mh" id="services1-2o">
     <!---->
     
     <!---->
@@ -87,7 +87,7 @@ s0.parentNode.insertBefore(s1,s0);
             <!--Titles-->
             <div class="title pb-5 col-12">
                 <h2 class="align-left pb-3 mbr-fonts-style display-2">BALTIMORE</h2>
-                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-5"><p><strong>JOYFUL STORIES FOR CHILDREN (age 6 - 9)</strong><br>Writer &amp; Voice: Chris Swingler</p></h3>
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-5"><p><strong>JOYFUL STORIES FOR CHILDREN (age 6 - 9)</strong><br>Writer &amp; Voice: Chris Swingler</p><br><p>Imagine this, a teddy bear Radio DJ broadcasting from his suitcase!</p></h3>
             </div>
             <!--Card-1-->
             <div class="card col-12 col-md-6 p-3 last-child">
